--- a/AE3t.ipynb
+++ b/AE3t.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f49eeadf-9b22-4582-9d86-eaa91ac5e41f",
    "metadata": {
     "editable": true,
@@ -98,7 +98,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
-    "\n"
+    "# hello\n"
    ]
   },
   {
